# blickfang

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
packaging/linux/: blickfang.desktop
src/: app.html  global.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_info.rs  ascii_art.rs  config_commands.rs  file_operations.rs  image_analyze.rs  linux_integration.rs  mod.rs
src-tauri/src/models/: config.rs  image.rs
src-tauri/src/resources/: ai_keywords.json  ascii_chars.json
src-tauri/src/utils/: config_utils.rs  dialog_utils.rs  file_system.rs  image_processing.rs  mod.rs  os_integration_linux.rs  os_specific_setup.rs  startup_handler.rs  window_utils.rs
src/i18n/de/: de.json
src/i18n/en/: en.json
src/i18n/ja/: ja.json
src/lib/: actions.ts  appManager.ts  colors.json  commands.ts  i18n.ts  imageProcessor.ts  keyboardInputManager.ts  shortcuts.ts  store.ts  themeManager.ts  themes.json
src/lib/actions/: focusTrap.ts  imageViewport.ts  lang.ts  zoompan.ts
src/lib/components/: AboutMenu.svelte  AiDetection.svelte  AppWindowMenu.svelte  AsciiCharsMenu.svelte  ButtonsMenu.svelte  Controls.svelte  EdgeIndicatorMenu.svelte  EdgeIndicators.svelte  ExifDisplay.svelte  ExifDisplaySidebar.svelte  Footer.svelte  GridOverlay.svelte  GridOverlayMenu.svelte  Header.svelte  HotkeysMenu.svelte  ImageDetails.svelte  ImageNameDisplay.svelte  ImageNameDisplayMenu.svelte  ImageView.svelte  InfoSidebar.svelte  InfoSidebarPlaceholder.svelte  InitialConfigDialog.svelte  InitialConfigSettingsDialog.svelte  InitialDialog.svelte  LanguageMenu.svelte  LinuxDesktopInstallDialog.svelte  NotificationToast.svelte  OptionsButton.svelte  OptionsDisplaySidebar.svelte  OptionsMenu.svelte  Placeholder.svelte  RemapDialog.svelte  SaveAsMenu.svelte  ThemeMenu.svelte  Toolbar.svelte  ToolbarMenu.svelte  Tooltip.svelte  TooltipRenderer.svelte
src/lib/core/: appManager.ts  commands.ts  keyboardInputManager.ts
src/lib/stores/: actions.ts  app.ts  appState.ts  config.ts  image.ts  index.ts  initialConfigDialog.ts  initialConfigSettingsDialog.ts  initialDialog.ts  ui.ts
src/lib/theme/: themeManager.ts  themes.json
src/lib/types/: app.ts  ascii_art.ts  image.ts  viewport.ts
src/lib/utils/: createTooltipStore.ts  hexToRgba.ts  i18n.ts  imageProcessor.ts  prettySize.ts  toastNotifications.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
