[package]
name = "blickfang"
version = "0.1.0"
description = "a image viewer app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blickfang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
mime_guess = "2.0.5"
tokio = { version = "1.48.0", features = ["sync"] }
kamadak-exif = "0.6.1"
image = { version = "0.25.8" }


[profile.dev]
incremental = true 

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort" 
strip = true 
