[package]
name = "blickfang"
version = "1.0.0"
description = "an image viewer app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blickfang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }



[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
base64 = "0.22.1"
mime_guess = "2.0.5"
tokio = { version = "1.48.0", features = ["sync", "fs", "rt"] }
kamadak-exif = "0.6.1"
lazy_static = "1.5.0"
webp = "0.3.1"
image = { version = "0.25.9", features = ["bmp", "png", "jpeg", "webp", "gif"] }
rusttype = "0.9.3"


[profile.dev]
incremental = true 

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort" 
strip = "debuginfo" 

# Memo:
# Run build command with prepended "NO_STRIP=true" to workaround failed linuxdeploy
